# gen/http/resource/server/types.go
@@ -35,13 +35,11 @@ type InfoResponseBodyExtended struct {
 	// Latest version o resource
 	LatestVersion string `form:"latest_version" json:"latest_version" xml:"latest_version"`
 	// Tags related to resources
-	Tags []*Tag1 `form:"tags" json:"tags" xml:"tags"`
+	Tags []*TagResponseBody `form:"tags" json:"tags" xml:"tags"`
 	// Rating of resource
 	Rating uint `form:"rating" json:"rating" xml:"rating"`
 	// Date when resource was last updated
 	LastUpdatedAt string `form:"last_updated_at" json:"last_updated_at" xml:"last_updated_at"`
-	// Version of resource
-	Versions []*VersionsResponseBody `form:"versions,omitempty" json:"versions,omitempty" xml:"versions,omitempty"`
 }
 
 // AllInternalErrorResponseBody is the type of the "resource" service "All"
@@ -97,13 +95,13 @@ type ResourceResponse struct {
 	// Latest version o resource
 	LatestVersion string `form:"latest_version" json:"latest_version" xml:"latest_version"`
 	// Tags related to resources
-	Tags []*Tag `form:"tags" json:"tags" xml:"tags"`
+	Tags []*TagResponse `form:"tags" json:"tags" xml:"tags"`
 	// Rating of resource
 	Rating uint `form:"rating" json:"rating" xml:"rating"`
 	// Date when resource was last updated
 	LastUpdatedAt string `form:"last_updated_at" json:"last_updated_at" xml:"last_updated_at"`
 	// Version of resource
-	Versions []*VersionsResponse `form:"versions,omitempty" json:"versions,omitempty" xml:"versions,omitempty"`
+	Versions []*VersionsResponse `form:"versions" json:"versions" xml:"versions"`
 }
 
 // CatalogResponse is used to define fields on response body types.
@@ -114,8 +112,8 @@ type CatalogResponse struct {
 	Type string `form:"type" json:"type" xml:"type"`
 }
 
-// Tag is used to define fields on response body types.
-type Tag struct {
+// TagResponse is used to define fields on response body types.
+type TagResponse struct {
 	// ID is the unique id of the tag
 	ID uint `form:"id" json:"id" xml:"id"`
 	// Name of the tag
@@ -138,12 +136,12 @@ type CatalogResponseBody struct {
 	Type string `form:"type" json:"type" xml:"type"`
 }
 
-// VersionsResponseBody is used to define fields on response body types.
-type VersionsResponseBody struct {
-	// Version ID of the resource to be fetched
-	VersionID uint `form:"versionId" json:"versionId" xml:"versionId"`
-	// Version of the resource to be fetched
-	Version string `form:"version" json:"version" xml:"version"`
+// TagResponseBody is used to define fields on response body types.
+type TagResponseBody struct {
+	// ID is the unique id of the tag
+	ID uint `form:"id" json:"id" xml:"id"`
+	// Name of the tag
+	Name string `form:"name" json:"name" xml:"name"`
 }
 
 // NewAllResponseBody builds the HTTP response body from the result of the
@@ -173,15 +171,9 @@ func NewInfoResponseBodyExtended(res *resourceviews.ResourceView) *InfoResponseB
 		body.Catalog = marshalResourceviewsCatalogViewToCatalogResponseBody(res.Catalog)
 	}
 	if res.Tags != nil {
-		body.Tags = make([]*Tag1, len(res.Tags))
+		body.Tags = make([]*TagResponseBody, len(res.Tags))
 		for i, val := range res.Tags {
-			body.Tags[i] = marshalResourceviewsTagToTag1(val)
-		}
-	}
-	if res.Versions != nil {
-		body.Versions = make([]*VersionsResponseBody, len(res.Versions))
-		for i, val := range res.Versions {
-			body.Versions[i] = marshalResourceviewsVersionsViewToVersionsResponseBody(val)
+			body.Tags[i] = marshalResourceviewsTagViewToTagResponseBody(val)
 		}
 	}
 	return body
